[project]
name = "ogn-encounter-data-pipeline"
version = "0.1.0"
description = "Open Glider Network data collection API and dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-only"
dependencies = [
    "eval-type-backport>=0.2.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "ogn-client==1.3.2",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0"
]

[project.scripts]
fastapi = "src.cli:main"

[project.urls]
Upstream = "https://github.com/glidernet/python-ogn-client"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.packages.find]
include = ["src*"]
