[project]
name = "ruag-ogn-src"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport>=0.2.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "ogn-client==1.3.2",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0"
]

[project.scripts]
fastapi = "src.cli:main"
